# MyLang

./: CMakeLists.txt  Makefile  MyLang  readme.md
examples/: matrix.txt  readme.md
include/: AstNode.h  CppProgram.h  ErrorHandler.h  MyLangProgram.h  VERSION.h  msclStringFuncs.h
src/: AllOperators.cpp  AstNode.cpp  CppProgram.cpp  ErrorHandler.cpp  Lexer.cpp  MyLangProgram.cpp  Namespace.cpp  Parser.cpp  PineconeStdLib.cpp  ResolveLiteral.cpp  SourceFile.cpp  StackFrame.cpp  Token.cpp  Type.cpp  main.cpp  msclStringFuncs.cpp
src/Actions/: Action.cpp  BoolOpAction.cpp  BranchAction.cpp  FunctionAction.cpp  IfAction.cpp  ListAction.cpp  LoopAction.cpp  MakeTupleAction.cpp  TypeAction.cpp  VarAction.cpp
src/utils/: fileUtils.cpp  stringArray.cpp  stringDrawing.cpp  stringNumConversion.cpp  stringUtils.cpp
tests/: readme.md  run_tests.pn
tests/integration/: brainfuck.pn  morse.pn  queue.pn
tests/regression/: bool_short_circuit.pn  error_on_nonexistant_file.pn  if_as_ternary.pn  multiple_left_inputs.pn  no_newline_at_end.pn
tests/unit/: conditionals.pn  constants.pn  funcs.pn  generate_windows_line_endings.sh  loops.pn  operators.pn  order_of_ops.pn  strings.pn  type_info.pn  vars.pn  whatevs.pn  windows_line_endings.pn
tutorials/: 0_setting_up.md  1_basic_concepts.md  2_control_flow.md  3_strings_and_input.md  4_structures_and_functions.md  5_whatevs.md  6_transpiling_to_cpp.md  7_temporary_hacks.md  index.md
